--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.3",
+    "body-parser": "^1.19.0",
     "core-js": "^3.8.1",
     "formvuelate": "^2.0.0",
     "nuxt": "^2.14.10",
